--- a/balatongyorok.css
+++ b/balatongyorok.css
@@ -15,9 +15,13 @@ body{
     margin: 0 auto 0 auto;
 }
 img{
-    width: 130px;
+    width: 150px;
     float: right;
-    margin-right: 50px;
+    margin-right: 15px;
+    margin-left: auto;
+    display: block;
+    padding: 15px;
+    
     
 }
 #batsanyi{
