--- a/balatongyorok.css
+++ b/balatongyorok.css
@@ -19,6 +19,7 @@ img{
     float: right;
     margin-right: 15px;
     margin-left: auto;
+    margin-bottom: 20px;
     display: block;
     
     
