--- a/balatongyorok.css
+++ b/balatongyorok.css
@@ -19,7 +19,7 @@ img{
     float: right;
     margin-right: 15px;
     margin-left: auto;
-    margin-bottom: 20px;
+    margin-top: 200px;
     display: block;
     
     
