--- a/balatongyorok.css
+++ b/balatongyorok.css
@@ -16,13 +16,9 @@ body{
 }
 img{
     width: 130px;
-    margin-right: 15px;
-    margin-left: auto;
-    margin-top: 200px;
-    display: block;
-    
-    
-    
+    float: right;
+    margin-right: 50px;
+
 }
 #batsanyi{
     width: 450px;
